prql-compiler/tests/integration/snapshots/integration__results@arithmetic.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "# mssql:test\nfrom [\n    { id = 1, x_int =  13, x_float =  13.0, k_int =  5, k_float =  5.0 },\n    { id = 2, x_int = -13, x_float = -13.0, k_int =  5, k_float =  5.0 },\n    { id = 3, x_int =  13, x_float =  13.0, k_int = -5, k_float = -5.0 },\n    { id = 4, x_int = -13, x_float = -13.0, k_int = -5, k_float = -5.0 },\n]\nselect {\n    id,\n\n    x_int / k_int,\n    x_int / k_float,\n    x_float / k_int,\n    x_float / k_float,\n\n    q_ii = x_int // k_int,\n    q_if = x_int // k_float,\n    q_fi = x_float // k_int,\n    q_ff = x_float // k_float,\n\n    r_ii = x_int % k_int,\n    r_if = x_int % k_float,\n    r_fi = x_float % k_int,\n    r_ff = x_float % k_float,\n\n    (q_ii * k_int + r_ii | round 0),\n    (q_if * k_float + r_if | round 0),\n    (q_fi * k_int + r_fi | round 0),\n    (q_ff * k_float + r_ff | round 0),\n}\nsort id\n"
input_file: prql-compiler/tests/integration/queries/arithmetic.prql
---
1,2.6,2.6,2.6,2.6,2,2,2,2,3,3,3,3,13,13,13,13
2,-2.6,-2.6,-2.6,-2.6,-2,-2,-2,-2,-3,-3,-3,-3,-13,-13,-13,-13
3,-2.6,-2.6,-2.6,-2.6,-2,-2,-2,-2,3,3,3,3,13,13,13,13
4,2.6,2.6,2.6,2.6,2,2,2,2,-3,-3,-3,-3,-13,-13,-13,-13
