prql-compiler/tests/integration/snapshots/integration__results@cast.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nsort [-bytes]\nselect [\n    name,\n    bin = ((album_id | as REAL) * 99)\n]\ntake 20\n"
input_file: prql-compiler/tests/integration/queries/cast.prql
---
Through a Looking Glass,22671
Occupation / Precipice,22473
The Young Lords,25047
The Man With Nine Lives,25047
Dave,22869
The Magnificent Warriors,25047
The Lost Warrior,25047
Maternity Leave,22869
Battlestar Galactica, Pt. 3,25047
The Woman King,22473
Murder On the Rising Star,25047
Through the Looking Glass, Pt. 2,22671
The Man from Tallahassee,22671
Better Halves,22572
Tricia Tanaka Is Dead,22671
Experiment In Terra,25047
The Gun On Ice Planet Zero, Pt. 2,25047
Lockdown,22869
Man of Science, Man of Faith (Premiere),22869
Run!,22572

