prql-compiler/tests/integration/snapshots/integration__results@distinct.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "from tracks\nselect [album_id, genre_id]\ngroup tracks.* (take 1)\nsort tracks.*\n"
input_file: prql-compiler/tests/integration/queries/distinct.prql
---
1,1
2,1
3,1
4,1
5,1
6,1
7,1
8,2
9,3
10,1
11,4
12,5
13,2
14,3
15,3
16,3
17,3
18,4
19,3
20,6
21,7
22,7
23,7
24,7
25,7
26,8
27,8
28,7
29,9
30,1
31,1
32,10
33,7
34,7
35,3
36,1
37,1
38,2
39,4
40,1
41,7
42,4
43,1
44,1
45,7
46,1
47,7
48,2
49,2
50,1
51,2
52,11
53,7
54,1
55,1
56,7
57,7
58,1
59,1
60,1
61,1
62,1
63,1
64,1
65,1
66,1
67,1
68,2
69,7
70,7
71,7
72,6
73,6
73,7
74,4
75,4
76,1
77,4
78,7
79,1
80,1
81,4
82,1
83,12
84,7
85,10
86,7
87,2
88,3
89,4
90,1
91,1
92,3
93,2
94,1
95,3
96,3
97,1
98,13
99,1
100,6
101,13
102,3
102,13
103,1
104,1
105,3
106,3
107,3
108,3
109,1
109,3
110,3
111,3
112,1
112,3
113,1
114,1
115,14
116,1
117,14
118,15
119,4
120,1
121,1
122,7
123,7
124,16
125,3
126,1
127,1
128,1
129,1
130,1
131,1
132,1
133,1
134,1
135,1
136,1
137,1
138,1
139,7
140,7
141,1
141,3
141,8
142,7
143,7
144,1
145,7
146,14
147,1
148,3
149,3
150,3
151,3
152,3
153,3
154,3
155,3
156,3
157,2
158,7
159,7
160,3
161,16
162,3
163,1
164,1
165,1
166,7
167,7
168,7
169,7
170,1
171,1
172,1
173,1
174,3
175,1
176,10
177,1
178,1
179,4
180,1
181,1
182,1
183,1
184,17
185,1
186,1
187,4
188,4
189,1
190,4
191,4
192,1
193,4
194,1
195,1
196,1
197,1
198,1
199,1
200,1
201,4
202,4
203,1
204,2
205,6
206,1
207,3
208,1
209,6
210,6
211,4
212,1
213,1
214,1
215,1
216,1
217,1
218,1
219,4
220,4
221,1
222,7
223,7
224,4
225,4
226,18
227,18
227,19
227,20
228,19
228,21
229,19
229,21
230,19
231,19
231,21
232,1
233,1
234,1
235,1
236,1
237,1
238,1
239,1
240,1
241,8
242,1
243,1
244,1
245,1
246,1
247,7
248,7
249,19
250,19
251,19
251,22
252,1
253,20
254,19
255,9
256,1
257,1
258,17
259,15
260,23
261,19
261,21
262,2
263,16
264,15
265,1
266,7
267,2
268,24
269,23
270,23
271,23
272,24
273,24
274,24
275,24
276,24
277,24
278,24
279,24
280,24
281,24
282,24
283,24
284,24
285,24
286,24
287,24
288,24
289,24
290,24
291,24
292,24
293,24
294,24
295,24
296,24
297,24
298,24
299,24
300,24
301,24
302,24
303,24
304,24
305,24
306,24
307,24
308,24
309,24
310,24
311,24
312,24
313,24
314,24
315,24
316,24
317,25
318,24
319,24
320,24
321,14
322,9
323,23
324,24
325,24
326,24
327,24
328,24
329,24
330,24
331,24
332,24
333,24
334,24
335,24
336,24
337,24
338,24
339,24
340,24
341,24
342,24
343,24
344,24
345,24
346,24
347,10

