prql-compiler/tests/integration/snapshots/integration__set_ops_remove.prql@set_ops_remove.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "func distinct rel -> (noop t = rel | group [t.*] (take 1))\n\nfrom_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2], [2], [3]] }'\ndistinct\nremove (from_text format:json '{ \"columns\": [\"a\"], \"data\": [[1], [2]] }')\n"
input_file: prql-compiler/tests/integration/queries/set_ops_remove.prql
---
WITH table_4 AS (
  SELECT
    1 AS a
  UNION
  ALL
  SELECT
    2 AS a
  UNION
  ALL
  SELECT
    2 AS a
  UNION
  ALL
  SELECT
    3 AS a
),
table_5 AS (
  SELECT
    1 AS a
  UNION
  ALL
  SELECT
    2 AS a
)
SELECT
  a
FROM
  table_4 AS table_2
EXCEPT
  DISTINCT
SELECT
  *
FROM
  table_5 AS table_3

