prql-compiler/tests/integration/snapshots/integration__sql@aggregation.prql.snap
---
source: prql-compiler/tests/integration/main.rs
expression: "# mssql:test\nfrom tracks\nfilter genre_id == 100\nderive empty_name = name == ''\naggregate {sum track_id, concat name, every empty_name, any empty_name}"
input_file: prql-compiler/tests/integration/queries/aggregation.prql
---
SELECT
  COALESCE(SUM(track_id), 0),
  COALESCE(STRING_AGG(name), ''),
  COALESCE(EVERY(name = ''), TRUE),
  COALESCE(ANY(name = ''), FALSE)
FROM
  tracks
WHERE
  genre_id = 100

